// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend Component renders correctly 1`] = `
<div>
  <Item
    fill="blue"
    key="0"
    label="label 1"
  />
  <Item
    key="1"
    label="label 2"
  />
</div>
`;

exports[`Legend Component renders correctly 2`] = `
<Item
  fill="blue"
  key="0"
  label="label 1"
/>
`;

exports[`Legend Component renders correctly 3`] = `
<Item
  key="1"
  label="label 2"
/>
`;

exports[`Legend Component renders correctly with tooltip content 1`] = `
<div>
  <Item
    fill="blue"
    key="0"
    label="label 1"
    tooltipContent={[Function]}
  />
  <Item
    key="1"
    label="label 2"
    tooltipContent={[Function]}
  />
</div>
`;

exports[`Legend Component renders correctly with tooltip content 2`] = `
<Item
  fill="blue"
  key="0"
  label="label 1"
  tooltipContent={[Function]}
/>
`;

exports[`Legend Component renders correctly with tooltip content 3`] = `
<Item
  key="1"
  label="label 2"
  tooltipContent={[Function]}
/>
`;
